src/test/ui/issues/issue-24267-flow-exit.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0381]: borrow of possibly uninitialized variable: `x`
=======
error[E0381]: borrow of possibly-uninitialized variable: `x`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/issue-24267-flow-exit.rs:12:20
   |
LL |     println!("{}", x);
   |                    ^ use of possibly-uninitialized `x`

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0381]: borrow of possibly uninitialized variable: `x`
=======
error[E0381]: borrow of possibly-uninitialized variable: `x`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/issue-24267-flow-exit.rs:18:20
   |
LL |     println!("{}", x);
   |                    ^ use of possibly-uninitialized `x`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
